# evm

./: Cargo.toml
src/: bytecode.rs  cli.rs  constants.rs  contract.rs  interpreter.rs  lib.rs  main.rs  memory.rs  stack.rs  utils.rs
src/instructions/: arithmetic.rs  bitwise.rs  control.rs  i256.rs  memory.rs  mod.rs  opcode.rs  stack.rs  system.rs
tests/: evm.rs
tests/common/: mod.rs
