[package]
name = "smol-evm-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-primitives = { version = "0.5", default-features = false, features = [
    "rlp",
] }
bitvec = "1.0.1"
# alloy-rlp = { version = "0.3", default-features = false, features = ["derive"] }
# bitflags = { version = "2.4.1", default-features = false }
clap = { version = "4.4.11", features = ["derive"] }
color-eyre = "0.6.2"
eyre = "0.6.9"

[dev-dependencies]
pretty_assertions = { version= "1.4.0" }
